[gd_scene load_steps=41 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sfx/sfx_zapsplat_laser.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Damage.gd" type="Script" id=4]
[ext_resource path="res://Sfx/sfx_zapsplat_metal_hit1.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/blink_shader.tres" type="Material" id=6]
[ext_resource path="res://Scenes/Misc/BlinkAnimation.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Misc/HitSfx.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sfx/stf_zapsplat_ticking.mp3" type="AudioStream" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -7, 7, 3, -7, 3 )

[sub_resource type="Animation" id=2]
resource_name = "aim_dl"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 225.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "aim_down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "aim_dr"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 135.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "aim_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "aim_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "aim_ul"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -45.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "aim_up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "aim_ur"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "aim_down"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "aim_up"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "aim_left"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "aim_right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "aim_dr"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "aim_dl"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "aim_ul"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "aim_ur"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 14 )
blend_point_4/pos = Vector2( 0.6, 0.6 )
blend_point_5/node = SubResource( 15 )
blend_point_5/pos = Vector2( -0.6, 0.6 )
blend_point_6/node = SubResource( 16 )
blend_point_6/pos = Vector2( -0.6, -0.6 )
blend_point_7/node = SubResource( 17 )
blend_point_7/pos = Vector2( 0.6, -0.6 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "aim_down"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "aim_right"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "aim_left"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "aim_up"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "aim_dr"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "aim_dl"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "aim_ul"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "aim_ur"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 23 )
blend_point_4/pos = Vector2( 0.6, 0.6 )
blend_point_5/node = SubResource( 24 )
blend_point_5/pos = Vector2( -0.6, 0.6 )
blend_point_6/node = SubResource( 25 )
blend_point_6/pos = Vector2( -0.6, -0.6 )
blend_point_7/node = SubResource( 26 )
blend_point_7/pos = Vector2( 0.6, -0.6 )

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachine" id=30]
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( 416, 121 )
states/Shoot/node = SubResource( 27 )
states/Shoot/position = Vector2( 635, 121 )
transitions = [ "Idle", "Shoot", SubResource( 28 ), "Shoot", "Idle", SubResource( 29 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[node name="Player" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 6 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 4 )
damage = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 1 )

[node name="Guns" type="Node2D" parent="."]

[node name="Gun1" type="Position2D" parent="Guns"]
position = Vector2( -5.5, -3.5 )

[node name="Gun2" type="Position2D" parent="Guns"]
position = Vector2( 5.5, -3.5 )

[node name="Gun3" type="Position2D" parent="Guns"]
position = Vector2( 0, -7 )

[node name="Timer" type="Timer" parent="."]

[node name="OneSecond" type="Timer" parent="."]
autostart = true

[node name="ShieldTimer" type="Timer" parent="."]
autostart = true

[node name="ShootSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
bus = "Sfx"

[node name="HitSfx" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 5 )

[node name="ClockTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -80.0
autoplay = true
bus = "Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aim_dl = SubResource( 2 )
anims/aim_down = SubResource( 3 )
anims/aim_dr = SubResource( 4 )
anims/aim_left = SubResource( 5 )
anims/aim_right = SubResource( 6 )
anims/aim_ul = SubResource( 7 )
anims/aim_up = SubResource( 8 )
anims/aim_ur = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 31 )
parameters/Idle/blend_position = Vector2( -0.00289297, -0.827586 )
parameters/Shoot/blend_position = Vector2( -0.00283289, -0.783251 )

[node name="BlinkAnimation" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="Hitbox" to="." method="hitbox_activated"]
[connection signal="timeout" from="Timer" to="." method="can_shoot"]
[connection signal="timeout" from="OneSecond" to="." method="one_second"]
[connection signal="timeout" from="ShieldTimer" to="." method="shield_one_second"]
[connection signal="animation_finished" from="BlinkAnimation" to="." method="blink_finished"]
